Updated 404 page. Fixed alignment. Home button to be added.

--- a/Pages/404 page/404 page.css
+++ b/Pages/404 page/404 page.css
@@ -32,61 +32,21 @@ a
 
 /*Main body alignment and fonts end*/
 
-/*Header design start*/
-
-header
-{
-    display: grid;
-    border-bottom: 10px solid #fecd3e;
-    grid-template-columns: 4fr 5fr;
-    padding-left: 3%;
-}
-
-header > #headerlogo > a
-{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-#headerlogoimg
-{
-    width: 226px;
-}
-
-header > #links
-{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    text-align: center;
-    align-content: center;
-    font-family: "Nexa Bold";
-    font-size: 24px;
-}
-
-/*Header design end*/
-
-
-
 /*Body design start*/
-
-#pride-bg
-{
-    background-image: url(../../Fontsandimages/background.png);
-    background-size: 97%;
-}
 
 #mainFlex
 {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
     align-items: center;
+    height: 100vh;
+    background-image: url(../../Fontsandimages/background.png);
+    background-size: 97%;
 }
 
 #flexText
 {
-    margin-left: 20px;
+    width: 50%;
+    margin-left: 50px;
 }
 
 #flexMainTitle
@@ -94,6 +54,7 @@ header > #links
     font-family: "Nexa Bold";
     font-size: 64px;
     margin-bottom: 0;
+    margin-top: 0;
 }
 
 #flexSubtitle
@@ -115,6 +76,14 @@ header > #links
     margin-bottom: 0;
 }
 
+#flexImg
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
 #flexImg > img
 {
     width: 50%;
@@ -122,48 +91,3 @@ header > #links
 
 
 /*Body design end*/
-
-
-
-/*Footer design start*/
-
-footer
-{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding-left: 3%;
-    font-size: 24px;
-    font-family: "Nexa Bold";
-    border-top: 10px solid #fecd3e;
-}
-
-footer > div > p
-{
-    text-align: center;
-    align-content: center;
-}
-
-.footerleftalign
-{
-    width: 250px;
-}
-
-.footerleftalign > p
-{
-    margin: 0;
-    text-align: left;
-}
-
-.icons
-{
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-footer > .icons > div > a > img
-{
-    width: 50px;
-}
-
-/*Footer design end*/
